# cpp-async-logger

./: .gitignore  CMakeLists.txt  README.md  logs.txt  main.cpp
.github/workflow/: ci.yml
.github/workflows/: ci.yml
build-tsan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  logger_demo  unit_tests  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
include/: log_error.h  logger.h  sinks.h
src/: logger.cpp  sinks.cpp
tests/: logger_test.cpp
